--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<app-header></app-header>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
+
+
+<app-footer></app-footer>
+
+
