Maquetación de login

--- a/front/src/app/modules/home/login/login.component.html
+++ b/front/src/app/modules/home/login/login.component.html
@@ -1,25 +1,31 @@
-<h1>login</h1>
 
-<div class="logeo">
+
+<div class="fondo">
+    <div class="logeo">
    
-    <div class="form-container">
-        <p class="title">Login</p>
-        <form class="form">
-            <div class="input-group">
-                <label for="username">Usuario</label>
-                <input type="text" name="username" id="username" placeholder="">
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="">
-                
-            </div>
-            <label for=""></label>
-            <button class="sign">Ingresar</button>
-        </form>
-       
-        
-    </div>
+        <div class="form-container">
+            <p class="title">Login</p>
+            <form class="form">
+                <div class="input-group">
+                    <label for="username">Usuario</label>
+                    <input type="text" name="username" id="username" placeholder="">
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" placeholder="">
+                    
+                </div>
+                <label for=""></label>
+                <button class="sign">Ingresar</button>
+            </form>
+           
+            
+        </div>
+
+
+
+
+
 
 
 </div>
