--- a/front/src/app/modules/home/login/login.component.css
+++ b/front/src/app/modules/home/login/login.component.css
@@ -1,9 +1,17 @@
+.fondo{
+    background-color: black;
+}
+
 .logueo{
-    display: flex;
-    text-align: center;
+    position: absolute;
+    
+    
 }
 .form-container {
-    margin-left: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
     width: 320px;
     border-radius: 0.75rem;
     background-color: rgba(17, 24, 39, 1);
