--- a/front/src/app/modules/home/login/login.component.css
+++ b/front/src/app/modules/home/login/login.component.css
@@ -1,17 +1,24 @@
 .fondo{
-    background-color: black;
+  background: linear-gradient(rgb(45, 45, 44), rgb(0, 0, 0));
+  padding: 4%;
+  
 }
 
 .logueo{
-    position: absolute;
+   /*position: absolute;*/
+   display: grid;
+   
+   
     
     
 }
 .form-container {
-    position: relative;
+  margin:auto;
+  
+    /*position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);*/
     width: 320px;
     border-radius: 0.75rem;
     background-color: rgba(17, 24, 39, 1);
