Se carga main, footer y header

--- a/front/src/app/modules/home/login/login.component.html
+++ b/front/src/app/modules/home/login/login.component.html
@@ -16,7 +16,7 @@
                     
                 </div>
                 <label for=""></label>
-                <button class="sign">Ingresar</button>
+                <button type="submit" class="sign">Ingresar</button>
             </form>
            
             
