--- a/front/src/app/modules/home/header/header.component.html
+++ b/front/src/app/modules/home/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<header>
+    <div id="header-left">
+        <a href="main"><img src="../../../../assets/img/logo.jpg" alt="logo de Cilton" class="logo"></a>
+    </div>
+    <nav id="header-right">
+        <ul>
+            <li><a routerLink="login">Ingresar</a></li>
+            <li><a href="">Usuario</a></li>
+            <li><a href="">Productos</a></li>
+            <li><a href="">Producción</a></li>
+            <li><a href="">Depósito</a></li>
+            <li><a href="">Ventas</a></li>
+        </ul>
+    </nav>
+</header>
