Se modifica html  y css y se rutea con routerLink

--- a/front/src/app/modules/home/footer/footer.component.html
+++ b/front/src/app/modules/home/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <section>
-        <a href="main"><img src="../../../../assets/img/logo.jpg" class="logo" alt="logo"></a>
+        <a routerLink="main"><img src="../../../../assets/img/logo.jpg" class="logo" alt="logo"></a>
         <p class="Copyright">© Copyright - Cilton Hidráulicos - 2023</p> 
     </section>
 </footer>
