--- a/front/src/app/modules/home/header/header.component.html
+++ b/front/src/app/modules/home/header/header.component.html
@@ -1,6 +1,6 @@
-<header>
+<section class="header">
     <div id="header-left">
-        <a href="main"><img src="../../../../assets/img/logo.jpg" alt="logo de Cilton" class="logo"></a>
+        <a routerLink="main"><img src="../../../../assets/img/logo.jpg" alt="logo de Cilton" class="logo"></a>
     </div>
     <nav id="header-right">
         <ul>
@@ -12,4 +12,4 @@
             <li><a href="">Ventas</a></li>
         </ul>
     </nav>
-</header>
+</section>
