--- a/front/src/app/modules/home/main/main.component.html
+++ b/front/src/app/modules/home/main/main.component.html
@@ -1,12 +1,10 @@
-<section>
-    <main>
-        <div id="introduction" style="padding: 120px;">
-            <div id="introduction-text">
-                <h1>Bienvenidos</h1>
-            </div>
-            <div id="introduction-actions" style="margin-top: 10%;">
-                <a href="login"><button class="redondo">Ingresar</button></a>
-            </div>
+<section class="main">
+    <div>
+        <div>
+            <h1>Bienvenidos</h1>
         </div>
-    </main>
+        <div class="boton">
+            <a routerLink="/login"><button class="redondo">Ingresar</button></a>
+        </div>
+    </div>
 </section>
